--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
-
 <body>
-        <h2>DevWave Diaries</h2>
-</body>
+    <div class="container">
+        <button id="glow" class="button">Submit</button>
+        <button id="border" class="button">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Submit
+        </button>
 
+        <button id="auto" class="button" href="">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Submit
+        </button>
+        <button id="twoBorder" class="newButton">
+            <div class="in">submit</div>
+        </button>
+    </div>
+</body>
 </html>
