--- a/index.html
+++ b/index.html
@@ -1,48 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
-
 <body>
-    <div class="container">
-        <div class="card">
-            <div class="top"><i class="fa-brands fa-codepen"></i></div>
-            <div class="bottom">
-                <h1 class="heading">SOURCE CODE</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae enim, necessitatibus asperiores
-                    ducimus ipsa praesentium odio earum iure adipisci corrupti.
-                </p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="top"><i class="fa-solid fa-code"></i></div>
-            <div class="bottom">
-                <h1 class="heading">SOURCE CODE</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae enim, necessitatibus asperiores
-                    ducimus ipsa praesentium odio earum iure adipisci corrupti.
-                </p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="top"><i class="fa-brands fa-css3"></i></div>
-            <div class="bottom">
-                <h1 class="heading">SOURCE CODE</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae enim, necessitatibus asperiores
-                    ducimus ipsa praesentium odio earum iure adipisci corrupti.
-                </p>
-            </div>
-        </div>
-    </div>
+    <script>
+        function spark(event){
+            let i = document.createElement('i');
+            i.style.left = (event.pageX) + 'px';
+            i.style.top = (event.pageY) + 'px';
+            // to add random shape
+            i.style.scale = `${Math.random() * 2 + 1}`;
+
+            // randomly set some property. --x and --y is the name of variable
+            // The i.style.setProperty function is used to set CSS custom properties (variables) directly on an element's style object.
+            i.style.setProperty('--x', getRandomTransitionValue());
+            i.style.setProperty('--y', getRandomTransitionValue());
+
+            document.body.appendChild(i);
+
+            setTimeout(() => {
+                document.body.removeChild(i);
+            }, 2000);
+        }
+
+        function getRandomTransitionValue(){
+            return `${Math.random() * 400 - 200}px`;
+        }
+
+        document.addEventListener('mousemove', spark);
+    </script>
 </body>
 </html>
